tests/fixtures/invalid/bytes_floordiv_bytes.py
# Cannot floor divide Bytes and Bytes
x: bytes = b"hello" // b"hello"
